# endf-parserpy

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.MIT  MANIFEST.in  README.md  build.py  cibuildhack.py  create_release_tag.py  endf.lark  endf_lark.py  endf_parser.py  endf_parsing_utils.py  endf_snippets.py  endf_spec.py  endf_utils.py  firstattempt.py  flow_control_utils.py  fortran_utils.py  pyproject.toml  setup.py  tree_utils.py  treeparser.py  utils.py
.github/workflows/: first_workflow.yml  publish_package.yml  publish_package.yml.bkcup  test_package.yml
.pre-commit-hooks/: update-changelog-version.py  update-last-modified-header.py
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/guide/: accelerated_parsing_and_writing.rst  arrays_as_list.rst  command_line_interface.rst  comparing_endf_files.rst  creation_endf_scratch.rst  endf_format_validation.rst  endf_plumbing.rst  format_extensions.rst  format_translation.rst  getting_started.rst  high_level_functionality.rst  pendf_and_format_flavors.rst  perfect_precision.rst  python_and_cpp_parser.rst  reading_writing_endf.rst  working_with_legacy_formats.rst
docs/source/overview/: endf_navigation.rst  mapping_endf_recipes.rst  philosophy.rst
docs/source/reference/: classes.rst  endf6_recipes.rst  modules.rst  related_software.rst
endf_parserpy/: __init__.py  accessories.py  cmd.py  custom_exceptions.py  debugging_utils.py  endf6_plumbing.py  endf_lark.py  endf_mapping_core.py  endf_mapping_utils.py  endf_mappings.py  endf_parser.py  endf_parser_base.py  endf_parser_factory.py  endf_parsing_utils.py  endf_recipe_utils.py  endf_spec.py  endf_utils.py  ext_endf_parser.py  flow_control_utils.py  fortran_utils.py  logging_utils.py  math_utils.py  meta_control_utils.py  tree_utils.py  user_tools.py
endf_parserpy/cli/: cmd.py  cmd_utils.py
endf_parserpy/cli/actions/: compare.py  convert.py  explain.py  insert_text.py  match.py  replace.py  show.py  update_directory.py  validate.py
endf_parserpy/compat_wrappers/: import_resources_new.py  importlib_resources.py
endf_parserpy/compiler/: __init__.py  code_generator_core.py  code_generator_parsing.py  code_generator_parsing_core.py  code_generator_writing.py  code_generator_writing_core.py  compiler.py  cpp_boilerplate.py  cpp_boilerplate_reading.py  cpp_boilerplate_writing.py  cpp_code_primitives.py  cpp_custom_classes.py  cpp_primitives.py  endf2cpp.py  endf2cpp_aux.py  endf2cpp_aux_writing.py  lookahead_management.py  mode_management.py  node_aux.py  node_checks.py  variable_management.py
endf_parserpy/compiler/cpp_templates/: endf_float_cpp.hpp  index_shifter.hpp  module_header.hpp  (+2 more)
endf_parserpy/cpp_parsers/: __init__.py  endf6.cpp  endf6_ext.cpp  endf_parser_cpp.py  jendl.cpp
endf_parserpy/endf_recipes/: __init__.py  catalogue.py  endf_lark_ebnf.py  endf_recipe_mf0_mt0.py  endf_recipe_mf10.py  endf_recipe_mf12.py  endf_recipe_mf13.py  endf_recipe_mf14.py  endf_recipe_mf15.py  endf_recipe_mf1_mt451.py  endf_recipe_mf1_mt452.py  endf_recipe_mf1_mt455.py  endf_recipe_mf1_mt456.py  endf_recipe_mf1_mt458.py  endf_recipe_mf1_mt460.py  endf_recipe_mf23.py  endf_recipe_mf26.py  endf_recipe_mf27.py  endf_recipe_mf28.py  endf_recipe_mf2_mt151.py  endf_recipe_mf3.py  endf_recipe_mf31_mt452_455_456.py  endf_recipe_mf32.py  endf_recipe_mf33.py  endf_recipe_mf34.py  endf_recipe_mf35.py  endf_recipe_mf4.py  endf_recipe_mf40.py  endf_recipe_mf5.py  endf_recipe_mf6.py  endf_recipe_mf7.py  endf_recipe_mf8.py  endf_recipe_mf8_mt454.py  endf_recipe_mf8_mt457.py  endf_recipe_mf8_mt459.py  endf_recipe_mf9.py  utils.py
endf_parserpy/interpreter/: __init__.py  cmd.py  custom_exceptions.py  endf6_plumbing.py  endf_mapping_core.py  endf_mapping_utils.py  endf_mappings.py  endf_parser.py  endf_recipe_utils.py  endf_utils.py  fortran_utils.py  helpers.py  logging_utils.py  lookahead_management.py  meta_control_utils.py  user_tools.py
endf_parserpy/utils/: accessories.py  debugging_utils.py  endf6_plumbing.py  matching.py  math_utils.py  tree_utils.py  user_tools.py
examples/: example-001-basic-parsing.py  temporary-for-development.py
examples/data/: eaf2007_abridged.endf
pure_cpp_playground/: README.md  create_code.py  jsonvalue.cpp  requirements.txt
testdata/: endf_snippets.py  endf_spec.py  my_n_2925_29-Cu-63.endf
tests/: base_test_endf_recipe_elements.py  conftest.py  test_accessories.py  test_endf_construction.py  test_endf_cpp_parser.py  test_endf_cpp_parser_options.py  test_endf_float_class.py  test_endf_parser.py  test_endf_parser_factory.py  test_endf_parser_options.py  test_endf_recipe_elements.py  test_endf_recipe_elements_cpp.py  test_endf_recipe_elements_python.py  test_matching.py  test_py_and_cpp_parser_output_equivalence.py  test_reported_cpp_parser_issues.py
tests/testdata/: n_2925_29-Cu-63.endf  n_3025_30-Zn-64.endf  tsl_Al.endf
(+118 files in other folders)
