[tool.poetry]
name = "endf-parserpy"
description = "A Python package for reading, writing, verifying and translating ENDF-6 files"
authors = ["Georg Schnabel"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iaea-nds/endf-parserpy"
documentation = "https://endf-parserpy.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
# version will be retrieved from __version__
# attribute defined in endf_parserpy/__init__.py
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
lark = ">=1.0.0"
appdirs = ">=1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=4.0"
pre-commit = "2.15.0"
poetry-dynamic-versioning = ">=1.3.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.from-file]
source = "endf_parserpy/__init__.py"
pattern = "__version__ *= *\"(.*)\""

[tool.poetry.build]
script = "build.py"
# The following line is essential, as otherwise
# the build.py script doesn't seem to be executed
generate-setup-file = true

[build-system]
requires = [
    "setuptools>=58.0.0,<69.0.0",
    "pybind11>=2.10.0",
    "poetry-core>=1.2",
    "poetry-dynamic-versioning>=1.3",
    "lark>=1.0.0",     # required for C++ compilation during
    "appdirs>=1.4.0",  # installation using functionality of endf-parserpy
]
# thin wrapper around poetry.core.masonry.api
build-backend = "poetry_dynamic_versioning.backend"
